remove expired button added

--- a/eventlist.html
+++ b/eventlist.html
@@ -10,6 +10,7 @@
 
   <body>
     <button id="add-new-button">Add New Event</button>
+    <button id="remove-expired">Remove Expired Events</button>
 
     <form id="event-form">
         <table>
